--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
               <div class="container">
                 <div class="carousel-caption">
-                  <h1>Another example headline.</h1>
+                  <h1>Ejemplo 1</h1>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                   <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
                 </div>
@@ -93,7 +93,7 @@
               <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
               <div class="container">
                 <div class="carousel-caption">
-                  <h1>One more for good measure.</h1>
+                  <h1>Ejemplo 2</h1>
                   <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                   <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
                 </div>
